@@ -1,4 +1,13 @@
- $Id: ChangeLog,v 1.134 2006/10/24 01:50:50 urabe Exp $
+ $Id: ChangeLog,v 1.135 2007/01/15 23:07:59 urabe Exp $
+
+2007-01-16  Urabe Taku <urabe@eri.u-tokyo.ac.jp>
+        * src/wdisk.c: 2007.1.15 i<1000000 -> 5000000,
+                       BUFSZ 500000->1000000, BUFLIM 1000000->5000000
+        * src/cormeisei.c: MAX_SEC_SIZE 1000000 -> 5000000
+        * src/wadd2.c: MAXSIZE 1M->5M
+        * src/wadd.c: MAXSIZE 1M->5M
+        * src/raw2mon.c: MAXSIZE 1M->5M, SIZE_WBUF 300K->1M
+        * src/pmon.c: 'ch_file not found' message fixed
 
 2006-10-24  Urabe Taku <urabe@eri.u-tokyo.ac.jp>
         * src/win.c: fixed a bug in set_geometry() for resize or OPEN.
